--- a/war/Booka.html
+++ b/war/Booka.html
@@ -11,7 +11,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Booka</title>
     
-    <script type="text/javascript" language="javascript" src="booka/Booka.nocache.js"></script>
+    <script type="text/javascript" language="javascript" src="Booka/Booka.nocache.js"></script>
   </head>
 
   <body>
