--- a/war/Booka.html
+++ b/war/Booka.html
@@ -10,7 +10,8 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Booka</title>
-    
+    <meta id="booka.serverPath" content="/proxy" />
+
     <script type="text/javascript" language="javascript" src="Booka/Booka.nocache.js"></script>
   </head>
 
