--- a/war/Booka.html
+++ b/war/Booka.html
@@ -12,6 +12,9 @@
     <title>Booka</title>
     <meta id="booka.serverPath" content="/proxy" />
 
+    <link type="text/css" rel="stylesheet" href="http://localhost:3000/stylesheets/booka.css">
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
+
     <script type="text/javascript" language="javascript" src="Booka/Booka.nocache.js"></script>
   </head>
 
